# SimpleClinic

./: .gitignore  LICENSE  README.md  SimpleClinic.spec  backup_database.spec  build_app_windows.bat  build_demo_windows.bat  build_demo_windows.txt  demo.spec  main.spec  pyproject.toml  vacuum.spec  
logo/: logo.icns
shortcuts/: linux.sh  macos.sh  windows.bat  windows_no_cmd.vbs  windows_pause.bat
src/: backup_database.py  config.py  default_config.json  demo.py  get_sql.py  initdb.py  main.py  make_sample.py  migrate.py  migratev2tov3.py  migratev3_2tov3_3.py  other_func.py  output.sql  paths.py  reset_config.py  reset_database.py  vacuum.py
src/core/: accel.py  config.py  generic.py  generic_widgets.py  init.py  mainview.py  menubar.py  other_func.py  printer.py  state.py
src/core/dialogs/: __init__.py  find_patient_dialog.py  patient_dialog.py  picker_dialog.py  procedure_dialog.py  report_dialog.py  sample_prescription_dialog.py  setup_dialog.py  warehouse_dialog.py
src/core/mainview_widgets/: __init__.py  buttons.py  order_book.py  patient_book.py  visit_list.py  widgets.py
src/core/state/: __init__.py  linedrugs_list_state.py  main_state.py  patient_state.py  queue_state.py  seentoday_state.py  state.py  visit_list_state.py  (+2 more)
src/db/: __init__.py  classes.py  connection.py  create_table.sql  csv_helper.py  db_class.py  db_connection.py  db_func.py  models.py  sql.py
src/misc/: __init__.py  config.py  keycodes.py  other_func.py  paths.py  printer.py
src/sample/: linedrugs.csv  lineprocedures.csv  linesampleprescription.csv  patients.csv  procedures.csv  queuelist.csv  sampleprescription.csv  visits.csv  warehouse.csv
src/state/: __init__.py  appointment_state.py  linedrug_state.py  linedrugs_list_state.py  lineprocedure_state.py  main_state.py  patient_state.py  queue_state.py  seentoday_state.py  visit_list_state.py  visit_state.py  warehouse_state.py
src/ui/: generic_widgets.py  mainview.py  menubar.py
start_app/: windows_no_cmd.vbs
(+82 files in other folders)
