[tool.poetry]
name = "pmpktn"
version = "2.2.1"
description = "Phần mềm phòng khám tại nhà"
license = "MIT"
authors = ["vuongkienthanh <thanhstardust@outlook.com>"]
readme = "README.md"
repository = "https://github.com/vuongkienthanh/pmpktn2"


[tool.poetry.dependencies]
python = "~3.10"
attrdict3 = { version = "^2.0.2", platform = "linux" }
wxPython = "^4.1"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
