[tool.poetry]
name = "SimpleClinic"
version = "3.3.8"
description = "Phần mềm phòng khám Simple Clinic"
license = "MIT"
authors = ["vuongkienthanh <thanhstardust@outlook.com>"]
readme = "README.md"
repository = "https://github.com/vuongkienthanh/SimpleClinic"


[tool.poetry.dependencies]
python = "~3.11"
attrdict3 = { version = "^2.0.2", platform = "linux" }
wxPython = "^4.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.3"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore-init-module-imports = true
extend-exclude = ["**/__init__.py"]
ignore = ["E501"]
